First commit of invoice generation
There is still a lot to implement / test, as described in nextPrompt.md

--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
       <?!= include('views/partials/ratepreview'); ?>
       <?!= include('views/partials/hourtypes'); ?>
       <?!= include('views/partials/deductions'); ?>
+      <?!= include('views/partials/invoices'); ?>
       <?!= include('views/partials/bas'); ?>
       <?!= include('views/partials/annualviews'); ?>
       <?!= include('views/partials/settings'); ?>
