--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -15,6 +15,7 @@
         <button class="ghost" id="nav-deductions">Deductions</button>
         <button class="ghost" id="nav-hour-types" style="display:none;">Hour Types</button>
         <button class="ghost" id="nav-bas" style="display:none;">BAS Reporting</button>
+        <button class="ghost" id="nav-invoices" style="display:none;">Invoices</button>
         <button class="ghost" id="nav-settings">Settings</button>
       </div>
     </div>
